@@ -10,9 +10,9 @@ TARGET2=/Volumes/UltraMax/spm8/toolbox/vbm8
 
 STARGET=dbm.neuro.uni-jena.de:/Applications/xampp/htdocs/vbm8
 
-MATLAB_FILES=Contents.m cg_vbm8_defaults.m cg_vbm8_run.m cg_vbm8_write.m cg_check_cov.m cg_showslice_all.m cg_spmT2x.m cg_spmF2x.m cg_vbm8_tools.m cg_vbm8_debug.m cg_morph_vol.m cg_vbm8_batch.* tbx_cfg_vbm8.m spm_vbm8.m vbm8.man cg_vbm8_bias* cg_spm8_batch.* cg_vbm8_defs.m cg_vbm8_longitudinal.m cg_vbm8_update.m cg_sanlm.m cg_vbm8_get_defaults.m cg_slice_overlay.m cg_slice_overlay_ui.m spm_max_nS.m slice_overlay.m cg_cleanup_gwc.m cg_vbm8_longitudinal_multi_run.m cg_vbm8_longitudinal_multi.m cg_cfg_realign.m cg_realign.m cg_run_realign_estimate.m cg_run_realign_estwrite.m GBM.m checkinopt.m dp.m
+MATLAB_FILES=Contents.m cg_vbm8_defaults.m cg_vbm8_run.m cg_vbm8_write.m cg_check_cov.m cg_showslice_all.m cg_spmT2x.m cg_spmF2x.m cg_vbm8_tools.m cg_vbm8_debug.m cg_morph_vol.m cg_vbm8_batch.* tbx_cfg_vbm8.m spm_vbm8.m vbm8.man cg_vbm8_bias* cg_spm8_batch.* cg_vbm8_defs.m cg_vbm8_longitudinal.m cg_vbm8_update.m cg_sanlm.m cg_vbm8_get_defaults.m cg_slice_overlay.m cg_slice_overlay_ui.m slice_overlay.m cg_cleanup_gwc.m cg_vbm8_longitudinal_multi_run.m cg_vbm8_longitudinal_multi.m cg_cfg_realign.m cg_realign.m cg_run_realign_estimate.m cg_run_realign_estwrite.m GBM.m checkinopt.m dp.m
 C_FILES=Amap.[ch] AmapMex.* sanlmMex.* sanlmMex_noopenmp.* sanlm_float.c MrfPrior.c Pve.c Kmeans.c vollib.c median3.* down_cut01.* vbdist.* eikonal3.*
-MISC_FILES=Template_?_IXI550_MNI152.nii avgT1_Dartel_IXI550_MNI152.nii VBM8-Manual.pdf CHANGES.txt
+MISC_FILES=Template_?_IXI550_MNI152.nii avgT1_Dartel_IXI550_MNI152.nii VBM8-Manual.pdf CHANGES.txt INSTALL.txt
 
 FILES=${MATLAB_FILES} ${C_FILES} ${MISC_FILES}
 
@@ -40,6 +40,9 @@ update:
 	-@echo '% Voxel Based Morphometry Toolbox' > Contents.m
 	-@echo '% Version ' ${VERSION} ' (VBM8) ' ${DATE} >> Contents.m
 	-@cat Contents_info.txt >> Contents.m
+	-@echo '% Voxel Based Morphometry Toolbox' > INSTALL.txt
+	-@echo '% Version ' ${VERSION} ' (VBM8) ' ${DATE} >> INSTALL.txt
+	-@cat INSTALL_info.txt >> INSTALL.txt
 	-@echo '% __________________________________________________________________________' > vbm8.man
 	-@echo '% Voxel Based Morphometry Toolbox for SPM8' >> vbm8.man
 	-@echo '% Version ' ${VERSION} ' (VBM8) ' ${DATE} >> vbm8.man
